--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,5 +21,6 @@ chrono = "0.4.24"
 time = { version = "0.3.21", features = ["std"] }
 async-trait = "0.1"
 futures = "0.3.28"
-
 serde_qs = "0.12.0"
+axum-swagger-ui = "0.2.2"
+openapi = "0.1.5"
