--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,10 +17,11 @@ serde_json = "1.0.96"
 tower-http = { version = "0.3.4", features = ["cors"] }
 tower-cookies = "0.9.0"
 jsonwebtoken = "8.3.0"
-chrono = "0.4.24"
+chrono = { version = "0.4.24", features = ["serde"] }
 time = { version = "0.3.21", features = ["std"] }
 async-trait = "0.1"
 futures = "0.3.28"
 serde_qs = "0.12.0"
 axum-swagger-ui = "0.2.2"
 openapi = "0.1.5"
+bson = "2.6.1"
